Fix Z-index

--- a/main.css
+++ b/main.css
@@ -210,7 +210,7 @@ main > * {
     right: 0;
     top: 12%;
     width: 100%;
-    height: 110vh;
+    height: 105vh;
 }
 /* ----- About ----- */
 .about {
